objects/Sales_Compensation__c.object
<CustomObject>
    <fields>
        <fullName>AE_Marker__c</fullName>
        <formula>IF (Total_AE_Split__c &lt;&gt; 100, IMAGE(&quot; /resource/AE_Error&quot;, &quot;Invalid&quot;, 109, 209), IMAGE(&quot; /resource/Sales_Comp_Success&quot;, &quot;Invalid&quot;, 109, 209))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Marker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Split_Percentage__c</fullName>
        <formula>TEXT(Total_AE_Split__c) &amp; &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Split Percentage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Marker__c</fullName>
        <formula>IF (AM_Split__c &lt;&gt; 100, IMAGE(&quot; /resource/AM_Error&quot;, &quot;Invalid&quot;, 109, 209), IMAGE(&quot; /resource/Sales_Comp_Success&quot;, &quot;Invalid&quot;, 109, 209))</formula>
        <label>AM Marker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Split_Percentage__c</fullName>
        <formula>TEXT(AM_Split__c) &amp; &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Split Percentage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Split__c</fullName>
        <label>AM Split</label>
        <summarizedField>Internal_Broker__c.Split_Percentage__c</summarizedField>
        <summaryFilterItems>
            <field>Internal_Broker__c.Type__c</field>
            <operation>equals</operation>
            <value>AM – Service Rep (Account Manager)</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Internal_Broker__c.Term_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Internal_Broker__c.Sales_Comp_Master__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Compensations</relationshipLabel>
        <relationshipName>Sales_Compensations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Line Of Business</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Marker__c</fullName>
        <formula>IF (Total_SR_Split__c &lt;&gt; 100, IMAGE(&quot; /resource/SR_Error&quot;, &quot;Invalid&quot;, 109, 209), IMAGE(&quot; /resource/Sales_Comp_Success&quot;, &quot;Invalid&quot;, 109, 209))</formula>
        <label>SR Marker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Split_Percentage__c</fullName>
        <formula>TEXT(Total_SR_Split__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Split Percentage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSE_Marker__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <formula>IF (Total_SSE_Split__c &lt;&gt; 100, IMAGE(&quot; /resource/SSE_Error&quot;, &quot;Invalid&quot;, 109, 209), IMAGE(&quot; /resource/Sales_Comp_Success&quot;, &quot;Invalid&quot;, 109, 209))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSE Marker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSE_Split_Percentage__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <formula>TEXT( Total_SSE_Split__c )+ &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSE Split Percentage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_AE_Split__c</fullName>
        <label>Total AE Split</label>
        <summarizedField>Internal_Broker__c.Split_Percentage__c</summarizedField>
        <summaryFilterItems>
            <field>Internal_Broker__c.Type__c</field>
            <operation>equals</operation>
            <value>AE – Sales Rep (SAE)</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Internal_Broker__c.Term_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Internal_Broker__c.Sales_Comp_Master__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_SR_Split__c</fullName>
        <label>Total SR Split</label>
        <summarizedField>Internal_Broker__c.Split_Percentage__c</summarizedField>
        <summaryFilterItems>
            <field>Internal_Broker__c.Type__c</field>
            <operation>equals</operation>
            <value>SR - Account Coordinator (SAR)</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Internal_Broker__c.Term_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Internal_Broker__c.Sales_Comp_Master__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_SSE_Split__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <label>Total SSE Split</label>
        <summarizedField>Internal_Broker__c.Split_Percentage__c</summarizedField>
        <summaryFilterItems>
            <field>Internal_Broker__c.Type__c</field>
            <operation>equals</operation>
            <value>SSE - Specialty Sales Executive</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Internal_Broker__c.Term_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Internal_Broker__c.Sales_Comp_Master__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WF_Fired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WF Fired</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Compensation</label>
    <nameField>
        <displayFormat>COMP-{00000000}</displayFormat>
        <label>Sales Compensation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Compensations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Ensure_Only_One_Sales_Comp_Is_Entered</fullName>
        <active>true</active>
        <errorConditionFormula>Opportunity__r.Has_Sales_Comp_Attached__c = True &amp;&amp; ISNEW()</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>There is an existing Sales Compensation master record, please edit existing for this Opportunity.</errorMessage>
    </validationRules>
</CustomObject>